Заменена версия swiper

--- a/src/pages/amarok_t3.html
+++ b/src/pages/amarok_t3.html
@@ -37,7 +37,10 @@
   <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
   <title>Гараж ЦОДД</title>
   <link rel="stylesheet" href="../style/style.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
+  <!-- С версией 5.3.8 тач на десктопе и телефоне работает-->
+  <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
+  <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script>
     // setTimeout(() => {
@@ -382,193 +385,6 @@
   <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="175"></a-sky>
 </a-scene>
 
-<!--<script type="module">-->
-<!--  // import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";-->
-<!--  let isModelLoaded = false;-->
-
-<!--  const LOADING_TIME = 50000;-->
-<!--  const PERCENT_STEP = 2;-->
-<!--  const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);-->
-<!--  let percent = 0;-->
-<!--  let preloader = document.querySelector(".progress-bar");-->
-<!--  const percentEl = document.getElementById("progress-label");-->
-<!--  const barEl = document.getElementById("progress-bar");-->
-<!--  // let progressText = document.getElementById("progress_text");-->
-
-<!--  function fadeOutnojquery(el) {-->
-<!--    el.style.opacity = 1;-->
-<!--    let interhellopreloader = setInterval(function () {-->
-<!--      el.style.opacity = el.style.opacity - 0.05;-->
-
-<!--      if (el.style.opacity <= 0.05) {-->
-<!--        clearInterval(interhellopreloader);-->
-<!--        preloader.style.display = "none";-->
-<!--      }-->
-<!--    }, 16);-->
-<!--  }-->
-
-<!--  function countLoad() {-->
-<!--    barEl.style.width = "0%";-->
-<!--    percentEl.textContent = `0%`;-->
-<!--    barEl.style.transition = `width ${COUNT_LOAD_TIME / 4000}s linear`;-->
-
-<!--    let countInterval = setInterval(function () {-->
-<!--      percent += PERCENT_STEP;-->
-
-<!--      if ((percent > 96) && !isModelLoaded) {-->
-<!--        percent = 98;-->
-<!--      } else {-->
-<!--        if (percent > 100) {-->
-<!--          percent = 100;-->
-<!--        }-->
-<!--      }-->
-
-<!--      percentEl.textContent = `${percent}%`;-->
-<!--      barEl.style.width = `${percent}%`;-->
-
-<!--      // if (percent >= 25 && percent < 50) {-->
-<!--      //     progressText.textContent = 'Подбираем экипаж...';-->
-<!--      // } else if (percent >= 50 && percent < 70) {-->
-<!--      //     progressText.textContent = 'Проводим ТО...';-->
-<!--      // } else if (percent >= 70 && percent < 90) {-->
-<!--      //     progressText.textContent = 'Намываем технику...';-->
-<!--      // } else if (percent >= 80) {-->
-<!--      //     progressText.textContent = 'Экипируемся...';-->
-<!--      // }-->
-<!--      if (isModelLoaded) {-->
-<!--        clearInterval(countInterval);-->
-<!--        let acceleratedInterval = COUNT_LOAD_TIME / 0;-->
-<!--        countInterval = setInterval(function () {-->
-<!--          percent += PERCENT_STEP;-->
-
-<!--          if (percent > 100) {-->
-<!--            percent = 100;-->
-<!--          }-->
-
-<!--          percentEl.textContent = `${percent}%`;-->
-<!--          barEl.style.width = `${percent}%`;-->
-
-<!--          if (percent === 100) {-->
-<!--            // progressText.textContent = 'Мы готовы!';-->
-<!--            setTimeout(function () {-->
-<!--              fadeOutnojquery(preloader);-->
-<!--            }, 500);-->
-<!--            clearInterval(countInterval);-->
-<!--          }-->
-<!--        }, acceleratedInterval);-->
-<!--      }-->
-<!--    }, COUNT_LOAD_TIME);-->
-<!--  }-->
-
-<!--  countLoad();-->
-
-<!--  function myLoading(url) {-->
-<!--    console.log('myLoading go!');-->
-<!--    let xhr = new XMLHttpRequest();-->
-<!--    xhr.open('GET', url);-->
-<!--    xhr.send();-->
-<!--    const startTime = new Date().getTime(); // Запоминаем время начала загрузки-->
-
-<!--    // 4. Эта функция будет вызвана после получения ответа-->
-<!--    xhr.onload = function() {-->
-<!--      if (xhr.status !== 200) { // анализ HTTP-статуса ответа-->
-<!--        console.log(`Error ${xhr.status}: ${xhr.statusText}`); // e.g. 404: Not Found-->
-<!--      } else {-->
-<!--        // console.log(`Done, got ${xhr.response.length} bytes`); // response - ответ сервера-->
-<!--        const endTime = new Date().getTime(); // Запоминаем время завершения загрузки-->
-<!--        const fileSizeInBytes = xhr.response.length;-->
-<!--        const fileSizeInMegabytes = fileSizeInBytes / (1024 * 1024); // Преобразование в мегабайты-->
-<!--        const downloadTimeInSeconds = (endTime - startTime) / 1000; // Преобразование в секунды-->
-
-<!--        console.log(`Done, got ${fileSizeInMegabytes.toFixed(1)} MB in ${downloadTimeInSeconds.toFixed(1)} seconds`);-->
-<!--        setTimeout(() => {-->
-<!--          isModelLoaded = true;-->
-<!--        }, 15000);-->
-<!--      }-->
-<!--    };-->
-<!--    // UNSENT = 0; // initial state-->
-<!--    // OPENED = 1; // open called-->
-<!--    // HEADERS_RECEIVED = 2; // полученные заголовки ответа-->
-<!--    // LOADING = 3; // происходит загрузка ответа (получен пакет данных)-->
-<!--    // DONE = 4; // запрос выполнен-->
-<!--    // xhr.onreadystatechange = function() {-->
-<!--    //     if (xhr.readyState == 4) {-->
-<!--    //         console.log('запрос выполнен');-->
-<!--    //     }-->
-<!--    // };-->
-<!--    xhr.onerror = function() {-->
-<!--      console.log("Request failed");-->
-<!--    };-->
-<!--  }-->
-
-<!--  const IframeObject = {-->
-<!--    AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',-->
-<!--    AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL',-->
-<!--    MOBILE_AR_ON: 'https://www.vectary.com/p/0GvsPRo0LNzL2q0uOZhFYD',-->
-<!--    // MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',-->
-<!--    XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9',-->
-<!--    XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a',-->
-<!--    XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/b8f75d2e-2c46-476f-8b9e-379064f997f1/b8f75d2e-2c46-476f-8b9e-379064f997f1'-->
-<!--  };-->
-<!--  // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id-->
-<!--  let screenWidth = window.innerWidth;-->
-<!--  let xhrFile;-->
-<!--  let readySRC;-->
-
-<!--  if (screenWidth >= 700 && screenWidth <= 1200) {-->
-<!--    readySRC = IframeObject.AR_OFF;-->
-<!--    xhrFile = IframeObject.XHR_AR_OFF;-->
-<!--  } else if (screenWidth < 700) {-->
-<!--    readySRC = IframeObject.MOBILE_AR_ON;-->
-<!--    xhrFile = IframeObject.XHR_MOBILE_AR_ON;-->
-<!--  } else {-->
-<!--    readySRC = IframeObject.AR_ON;-->
-<!--    xhrFile = IframeObject.XHR_AR_ON;-->
-<!--  }-->
-
-<!--  // async function initializeModelApi() {-->
-<!--  //     console.log('API go!');-->
-<!--  //     try {-->
-<!--  //         // Вызываем несуществующий метод, что приведет к ошибке (для теста)-->
-<!--  //         // await viewerApi.nonExistentMethod();-->
-<!--  //         await viewerApi.init();-->
-<!--  //         viewerApi.isReady().then(() => {-->
-<!--  //             isModelLoaded = true;-->
-<!--  //             console.log('Model loaded');-->
-<!--  //         });-->
-<!--  //     } catch (error) {-->
-<!--  //         console.error('Ошибка внутри API:', error);-->
-<!--  //         myLoading(xhrFile);-->
-<!--  //     }-->
-<!--  // }-->
-
-<!--  // function initializeModelApi() {-->
-<!--  //     myLoading(xhrFile);-->
-<!--  // }-->
-
-<!--  document.addEventListener("DOMContentLoaded", () => {-->
-<!--    let VectaryIframe = document.querySelector('.VectaryIframe');-->
-<!--    VectaryIframe.src = readySRC;-->
-<!--    // initializeModelApi();-->
-<!--    myLoading(xhrFile);-->
-<!--  });-->
-
-<!--  // // Wait for the page to load-->
-<!--  // window.onload = function () {-->
-<!--  //     // Get the performance entries-->
-<!--  //     let performanceEntries = performance.getEntriesByType("resource");-->
-<!--  //-->
-<!--  //     // Filter the entries to include all downloadable resources-->
-<!--  //     let downloadableResources = performanceEntries.filter(function (entry) {-->
-<!--  //         // Check if the resource has a valid URL-->
-<!--  //         // return entry.name && entry.name.length > 0;-->
-<!--  //         return entry.name && entry.name.length > 0;-->
-<!--  //     });-->
-<!--  //-->
-<!--  //     // Display the list of downloadable resources in the console-->
-<!--  //     console.log(downloadableResources);-->
-<!--  // };-->
-<!--</script>-->
 <script>
   // setTimeout(() => {
   let currentInfoPanel = null;
