--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -37,7 +37,10 @@
     <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="../style/style.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
+    <!-- С версией 5.3.8 тач на десктопе и телефоне работает-->
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
+    <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script defer>
         // setTimeout(() => {
