--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -38,7 +38,10 @@
   <title>Гараж ЦОДД</title>
   <meta name="description" content="Smooth Cam movement"/>
   <link rel="stylesheet" href="../style/style.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
+  <!-- С версией 5.3.8 тач на десктопе и телефоне работает-->
+  <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
+  <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script>
   <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   <script>
     // setTimeout(() => {
