--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -37,7 +37,10 @@
     <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="../style/style.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
+    <!-- С версией 5.3.8 тач на десктопе работает. На счет телефона пока не понятно -->
+    <!-- <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script> -->
+    <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script>
 </head>
 <body>
 <div class="BackToInnovation">
