--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex,nofollow,noarchive" />
+    <!-- <meta name="robots" content="noindex,nofollow,noarchive" /> -->
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
-    <meta name="yandex" content="noindex,nofollow,noarchive">
-    <meta name="googlebot" content="noindex,nofollow,noarchive">
-<!--    <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/>-->
+    <!-- <meta name="yandex" content="noindex,nofollow,noarchive">
+    <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
+    <!-- <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/> -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
@@ -17,24 +17,24 @@
     <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#090909"/>
-<!--    &lt;!&ndash; Primary Meta Tags &ndash;&gt;-->
-<!--    <meta name="title" content="Гараж ЦОДД"/>-->
-<!--    <meta name="description" content="Гараж ЦОДД"/>-->
-<!--    <meta name="keywords" content="Гараж ЦОДД"/>-->
+    <!--Primary Meta Tags-->
+    <meta name="title" content="Гараж ЦОДД"/>
+    <meta name="description" content="Гараж ЦОДД"/>
+    <meta name="keywords" content="Гараж ЦОДД"/>
 
-<!--    &lt;!&ndash; Open Graph / Facebook &ndash;&gt;-->
-<!--    <meta property="og:type" content="website"/>-->
-<!--    <meta property="og:url" content="https://garage-codd.ru/"/>-->
-<!--    <meta property="og:title" content="Гараж ЦОДД"/>-->
-<!--    <meta property="og:description" content="Гараж ЦОДД"/>-->
-<!--    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>-->
+    <!--Open Graph / Facebook-->
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://garage-codd.ru/"/>
+    <meta property="og:title" content="Гараж ЦОДД"/>
+    <meta property="og:description" content="Гараж ЦОДД"/>
+    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>
 
-<!--    &lt;!&ndash; Twitter &ndash;&gt;-->
-<!--    <meta property="twitter:card" content="summary_large_image"/>-->
-<!--    <meta property="twitter:url" content="https://garage-codd.ru/"/>-->
-<!--    <meta property="twitter:title" content="Гараж ЦОДД"/>-->
-<!--    <meta property="twitter:description" content="Гараж ЦОДД"/>-->
-<!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
+    <!--Twitter-->
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://garage-codd.ru/"/>
+    <meta property="twitter:title" content="Гараж ЦОДД"/>
+    <meta property="twitter:description" content="Гараж ЦОДД"/>
+    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>
     <title>Гараж ЦОДД</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
