--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -5,11 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex,nofollow,noarchive"/>
+    <!-- <meta name="robots" content="noindex,nofollow,noarchive"/> -->
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
-    <meta name="yandex" content="noindex,nofollow,noarchive"/>
-    <meta name="googlebot" content="noindex,nofollow,noarchive"/>
-    <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/>
+    <!-- <meta name="yandex" content="noindex,nofollow,noarchive"/>
+    <meta name="googlebot" content="noindex,nofollow,noarchive"/> -->
+    <!-- <link rel="shortcut icon" href="https://garage-codd.ru/favicon.ico"/> -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
