--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -35,6 +35,26 @@
     <meta property="twitter:title" content="Гараж ЦОДД"/>
     <meta property="twitter:description" content="Гараж ЦОДД"/>
     <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>
+
+    <!-- Yandex.Metrika counter -->
+    <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
+    <script type="text/javascript">
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(95985378, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
     <title>Гараж ЦОДД</title>
     <meta name="description" content="Smooth Cam movement"/>
     <link rel="stylesheet" href="../style/style.css">
