--- a/src/index.html
+++ b/src/index.html
@@ -844,7 +844,83 @@
                         <!-- <button class="contact-form__button" type="submit">Загрузить</button> -->
                       </form>
                 </div>
-                <div class="swiper-images"></div>
+                <div class="swiper-images">
+                    <div class="ticker ticker_1">
+                        <div class="flex mx-4 img-ticker">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <!-- Copy set of images -->
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                        </div>
+                    </div>
+                    <div class="ticker ticker_2">
+                        <div class="flex mx-4 img-ticker">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <!-- Copy set of images -->
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                        </div>
+                    </div>
+                    <div class="ticker ticker_3">
+                        <div class="flex mx-4 img-ticker">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <!-- Copy set of images -->
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
+                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
