добавленны проверки на отправку формы

--- a/src/index.html
+++ b/src/index.html
@@ -837,11 +837,10 @@
                   
                         <input class="contact-form__input contact-form__input_theme" name="theme" type="hidden" value="Заявка с сайта garage-codd.ru">
                         
-                        <div type="submit" class="contact-form__button">
-                          <img class="contact-form__button-img" src="./img/layout/pages/main/competition/download.svg" alt="Загрузить">
-                          <p>Загрузить</p>
-                        </div>
-                        <!-- <button class="contact-form__button" type="submit">Загрузить</button> -->
+                        <button type="submit" class="contact-form__button">
+                            <img class="contact-form__button-img" src="./img/layout/pages/main/competition/download.svg" alt="Загрузить">
+                            <p>Загрузить</p>
+                        </button>
                       </form>
                 </div>
                 <div class="swiper-images">
