--- a/src/index.html
+++ b/src/index.html
@@ -791,15 +791,16 @@
             </div>
         </section>
     </main>
-
+    <!-- https://0384-95-84-178-244.ngrok-free.app/contest -->
+    <!-- https://garagetest.ru/contest -->
     <div class="form-wrapper">
         <div class="container_main">
             <div class="form-content">
                 <div class="form_close">
                     <img class="form_close-img" src="./img/layout/pages/main/competition/close.svg" alt="Закрыть">
-                </div>
+                </div> 
                 <div class="form_send">
-                    <form class="contact-form" action="https://366a-95-84-178-244.ngrok-free.app/contest" method="POST" id="form-contact" autocomplete="off" enctype="multipart/form-data">
+                    <form class="contact-form" action="https://garagetest.ru/contest" method="POST" id="form-contact" autocomplete="off" enctype="multipart/form-data">
                         <p class="contact-form__title">Загрузка результатов</p>
                         <p class="contact-form__text">Укажите свой ник в&nbsp;телеграм и&nbsp;загрузите снимки для конкурса в&nbsp;форму.</br>Итоги будут подведены 12&nbsp;января</p>
                         <div class="preloader"></div>
@@ -832,7 +833,7 @@
                         <label class="contact-form__privacy">
                             <input class="real-checkbox" type="checkbox" name="privacy" checked required>
                             <span class="custom-checkbox"></span>
-                            <div class="contact-form__privacy-text">Даю согласие на обработку персональных данных согласно <a href="#" target="_blank">Политике обработки персональных данных</a></div>
+                            <div class="contact-form__privacy-text">Даю согласие на обработку персональных данных согласно <a href="https://coddmac.store/CODD_doc/Politics.pdf" target="_blank">Политике обработки персональных данных</a></div>
                         </label>
                   
                         <input class="contact-form__input contact-form__input_theme" name="theme" type="hidden" value="Заявка с сайта garage-codd.ru">
