--- a/src/index.html
+++ b/src/index.html
@@ -73,10 +73,11 @@
                     <p class="header__logo-text">Гараж ЦОДД</p>
                 </div>
                 <div class="ARphotoForm">
-                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <!-- <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
-                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4"> -->
+                    <img class="ARphotoForm_img" src="./img/layout/pages/main/competition/gift_header.svg" alt="Фотоконкурс">
                     <p class="ARphotoForm-text">Фотоконкурс</p>
                 </div>
                 <div class="header__menu">
@@ -779,7 +780,7 @@
                     </div>
                 </div>
 
-                <div class="competition">
+                <!-- <div class="competition">
                     <div class="competition_wrapper">
                         <div class="competition_info">
                             <p class="competition_title">Конкурс фотографии</p>
@@ -794,7 +795,7 @@
                         </div>
                         <img class="competition_merch-img" src="./img/layout/pages/main/competition/merch.png" alt="Мерч">
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </section>
@@ -857,82 +858,8 @@
                         </div>
                       </form>
                 </div>
-                <div class="swiper-images">
-                    <div class="ticker ticker_1">
-                        <div class="flex mx-4 img-ticker">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <!-- Copy set of images -->
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                        </div>
-                    </div>
-                    <div class="ticker ticker_2">
-                        <div class="flex mx-4 img-ticker">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <!-- Copy set of images -->
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                        </div>
-                    </div>
-                    <div class="ticker ticker_3">
-                        <div class="flex mx-4 img-ticker">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <!-- Copy set of images -->
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-5.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-4.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-3.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-2.jpg">
-                            <img class="w-64 mx-4 self-start flex-none" src="./img/layout/pages/main/competition/ticker/screen-1.jpg">
-                        </div>
-                    </div>
+                <div class="vectary_phone">
+                    <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="https://app.vectary.com/p/5KzbHOv5T50kLiUoeoJtLo" width="100%" height="100%"></iframe>
                 </div>
             </div>
         </div>
