--- a/src/index.html
+++ b/src/index.html
@@ -801,7 +801,6 @@
         </section>
     </main>
 
-    <!-- https://garagetest.ru/contest -->
     <div class="form-wrapper">
         <div class="container_main">
             <div class="form-content">
@@ -811,7 +810,11 @@
                 <div class="form_send">
                     <form class="contact-form" action="https://garagetest.ru/contest" method="POST" id="form-contact" autocomplete="off" enctype="multipart/form-data">
                         <p class="contact-form__title">Конкурс фотографии</p>
-                        <p class="contact-form__text">Используйте технологии дополненной реальности, чтобы сделать творческие, красивые или курьезные снимки с&nbsp;участием транспорта ЦОДД, представленного в&nbsp;нашем проекте. За&nbsp;самые интересные и&nbsp;запоминающиеся фотографии предусмотрены призы!</p>
+                        <div class="contact-form__text">
+                            <p>Посетите <a class="random-link" href="" target="_blank">виртуальный гараж</a> и&nbsp;используйте кнопку &laquo;AR&raquo; на&nbsp;мобильных устройствах, чтобы изучить транспорт ЦОДД в&nbsp;дополненной реальности.</p>
+                            <p>Для участия в&nbsp;розыгрыше, поделитесь своими творческими снимками или скриншотами с&nbsp;участием виртуального транспорта.</p>
+                            <p>Трех авторов лучших снимков ждут призы</p>
+                        </div>
                         <div class="hidden_if_send">
                             <div class="preloader"></div>
                             <p class="contact-form__message"></p>
@@ -840,7 +843,7 @@
                             </div>
                     
                             <label class="contact-form__privacy">
-                                <input class="real-checkbox" type="checkbox" name="privacy" checked required>
+                                <input class="real-checkbox" type="checkbox" name="privacy" required>
                                 <span class="custom-checkbox"></span>
                                 <div class="contact-form__privacy-text">Даю согласие на обработку персональных данных согласно <a href="https://coddmac.store/CODD_doc/Politics.pdf" target="_blank">Политике обработки персональных данных</a></div>
                             </label>
@@ -856,6 +859,9 @@
                       </form>
                 </div>
                 <div class="vectary_phone">
+                    <div class="vectary_phone-load">
+                        <img class="phone-load" src="./img/layout/pages/main/competition/phone_load.png" alt="Фото участников">
+                    </div>
                     <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="https://app.vectary.com/p/5KzbHOv5T50kLiUoeoJtLo" width="100%" height="100%"></iframe>
                 </div>
             </div>
