новый текст формы

--- a/src/index.html
+++ b/src/index.html
@@ -809,11 +809,24 @@
                 </div> 
                 <div class="form_send">
                     <form class="contact-form" action="https://garagetest.ru/contest" method="POST" id="form-contact" autocomplete="off" enctype="multipart/form-data">
-                        <p class="contact-form__title">Конкурс фотографии</p>
-                        <div class="contact-form__text">
+                        <!-- <p class="contact-form__title">Конкурс фотографии</p> -->
+                        <p class="contact-form__title">Призы за&nbsp;фотографии</p>
+                        <!-- <div class="contact-form__text">
                             <p>Посетите <a class="random-link" href="" target="_blank">виртуальный гараж</a> и&nbsp;используйте кнопку &laquo;AR&raquo; на&nbsp;мобильных устройствах, чтобы изучить транспорт ЦОДД в&nbsp;дополненной реальности.</p>
                             <p>Для участия в&nbsp;розыгрыше, поделитесь своими творческими снимками или скриншотами с&nbsp;участием виртуального транспорта.</p>
                             <p>Трех авторов лучших снимков ждут призы</p>
+                        </div> -->
+                        <div class="contact-form__text">
+                            <p>Как принять участие:</p>
+                            <ol class="contact-form__text-list">
+                                <li class="contact-form__text-item">Перейдите в&nbsp;<a class="random-link" href="" target="_blank">виртуальный гараж</a></li>
+                                <li class="contact-form__text-item">Откройте любой транспорт в&nbsp;дополненной реальности, нажав кнопку&nbsp;AR</li>
+                                <li class="contact-form__text-item">Создайте творческие снимки с&nbsp;любым виртуальным транспортным средством и&nbsp;поделитесь результатом в&nbsp;этой форме</li>
+                            </ol>
+                            <p>Трех авторов лучших снимков ждут призы</p>
+                            <!-- <p>Посетите <a class="random-link" href="" target="_blank">виртуальный гараж</a> и&nbsp;используйте кнопку &laquo;AR&raquo; на&nbsp;мобильных устройствах, чтобы изучить транспорт ЦОДД в&nbsp;дополненной реальности.</p>
+                            <p>Для участия в&nbsp;розыгрыше, поделитесь своими творческими снимками или скриншотами с&nbsp;участием виртуального транспорта.</p>
+                            <p>Трех авторов лучших снимков ждут призы</p> -->
                         </div>
                         <div class="hidden_if_send">
                             <div class="preloader"></div>
