Список формы по другому + убрана кнопка BC

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -137,10 +137,10 @@
     </script>
 </head>
 <body>
-<div class="BackToInnovation">
+<!-- <div class="BackToInnovation">
     <img class="innovation_img" src="https://coddmac.store/innovation/innovation.svg" alt="Инновационная столица">
     <p class="innovation_text">На главную</p>
-</div>
+</div> -->
 
 <div class="progress-bar">
     <div class="progress-bar-container">
