--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -62,10 +62,10 @@
     <script defer src="https://unpkg.com/swiper@5.3.8/js/swiper.min.js"></script>
 </head>
 <body>
-<div class="BackToInnovation">
+<!-- <div class="BackToInnovation">
     <img class="innovation_img" src="https://coddmac.store/innovation/innovation.svg" alt="Инновационная столица">
     <p class="innovation_text">На главную</p>
-</div>
+</div> -->
 
 <div class="progress-bar">
     <div class="progress-bar-container">
