--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -299,7 +299,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kamaz.html">
                                 <picture>
-                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high">
                                 </picture>
                             </a>
                         </div>
@@ -387,23 +387,12 @@
  mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
  httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
     <a-assets>
-        <script id="flatShader" type="x-shader/x-fragment">
-          varying vec2 vUv;
-          void main() {
-            gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-          }
-        </script>
         <img
-                id="room1"
-                src="../img/layout/pages/main/360/moskvich/moscvich.jpg"
-                crossorigin="anonymous"
-                importance="high"
+            id="room1"
+            src="../img/layout/pages/main/360/moskvich/moscvich.jpg"
+            crossorigin="anonymous"
+            importance="high"
         />
-        <a-mixin
-                id="info-sphere"
-                geometry="primitive: sphere; radius: 0.4;"
-                material="color: #ff0000;"
-        ></a-mixin>
     </a-assets>
     <a-entity
             id="cam"
@@ -594,7 +583,6 @@
         // myLoading(xhrFile);
     });
 </script>
-<script>
     // setTimeout(() => {
     let currentInfoPanel = null;
 
@@ -663,6 +651,6 @@
             });
         });
     // }, 1500);
-</script>
+</script> -->
 </body>
 </html>
