--- a/src/index.html
+++ b/src/index.html
@@ -335,14 +335,14 @@
                         <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="kamaz.html">
                             <div class="slid_img">
                                 <picture>
-                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
+                                    <img class="menu_preview-img" src="./img/layout/pages/main/slider/kamaz.png" alt="Грузовик" fetchpriority="high">
                                 </picture>
-                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/kamaz.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Дорожный патруль</p>
-                                    <p class="slid_info-text">Камаз</p>
+                                    <p class="slid_info-text">Грузовик</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -405,28 +405,28 @@
                             </div>
                         </a>
                     </div>
-                    <div class="traffic_patrol-slider-buttons InGrid">
+                    <!-- <div class="traffic_patrol-slider-buttons InGrid">
                         <div class="btn_prev">
                             <img class="prev_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_prev">
                         </div>
                         <div class="btn_next">
                             <img class="next_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_next">
                         </div>
-                    </div>
+                    </div> -->
                     <div class="traffic_patrol-slide-kamaz">
                         <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
                                  <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
                                     <div class="slid_img">
                                         <picture>
-                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап" fetchpriority="high">
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/kamaz.png" alt="Грузовик" fetchpriority="high">
                                         </picture>
-                                        <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                                        <video class="menu_preview-video" src="./img/video/kamaz.mp4" muted loop playsinline></video>
                                     </div>
                                     <div class="slid_info">
                                         <div class="slid_info-desc">
                                             <p class="slid_info-title">Дорожный патруль</p>
-                                            <p class="slid_info-text">Камаз</p>
+                                            <p class="slid_info-text">Грузовик</p>
                                         </div>
                                         <div class="slid_info-link">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -490,6 +490,14 @@
                                 </a>
                             </div>
                             <div class="swiper-pagination1"></div>
+                            <div class="traffic_patrol-slider-buttons">
+                                <div class="btn_prev">
+                                    <img class="prev_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_prev">
+                                </div>
+                                <div class="btn_next">
+                                    <img class="next_img" src="./img/layout/pages/main/slider/arrow_green.svg" alt="btn_next">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- <div class="traffic_patrol-new_NOSLIDER">
