--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -269,7 +269,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kamaz.html">
                                 <picture>
-                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high">
                                 </picture>
                             </a>
                         </div>
@@ -356,115 +356,30 @@
  mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
  httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
     <a-assets>
-        <script id="flatShader" type="x-shader/x-fragment">
-          varying vec2 vUv;
-          void main() {
-            gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-          }
-        </script>
-
         <img
-                id="room1"
-                src="../img/layout/pages/main/360/bus/bus_1.jpg"
-                crossorigin="anonymous"
-                importance="high"
+            id="room1"
+            src="../img/layout/pages/main/360/bus/bus_1.jpg"
+            crossorigin="anonymous"
+            importance="high"
         />
         <img
-                id="room2"
-                src="../img/layout/pages/main/360/bus/bus_2.jpg"
-                crossorigin="anonymous"
-                importance="low"
+            id="room2"
+            src="../img/layout/pages/main/360/bus/bus_2.jpg"
+            crossorigin="anonymous"
+            importance="low"
         />
         <img
-                id="room3"
-                src="../img/layout/pages/main/360/bus/bus_3.jpg"
-                crossorigin="anonymous"
-                importance="low"
+            id="room3"
+            src="../img/layout/pages/main/360/bus/bus_3.jpg"
+            crossorigin="anonymous"
+            importance="low"
         />
         <img
-                id="hotspot"
-                src="https://coddmac.store/BKL/360/source/Hotspot_blue_big.svg"
-                crossorigin="anonymous"
+            id="hotspot"
+            src="../img/layout/pages/main/360/hotspot.svg"
+            crossorigin="anonymous"
         />
-
-        <img
-                id="crossIcon"
-                src="https://coddmac.store/THREE/360/cross-icon.svg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-
-        <img
-                id="text-01"
-                src="https://coddmac.store/THREE/360/text/text-01.svg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-
-        <img
-                id="text-02"
-                src="https://coddmac.store/THREE/360/text/text-02.svg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-
-        <a-mixin
-                id="info-sphere"
-                geometry="primitive: sphere; radius: 0.4;"
-                material="color: #ff0000;"
-        ></a-mixin>
-
-        <template id="infoPanel1">
-            <a-plane
-                    color="black"
-                    material="shader: flat"
-                    height="2"
-                    width="4"
-                    position="0 0 0"
-                    rounded="2.8"
-            >
-                <a-image
-                        position="0 0 0.1"
-                        src="#text-02"
-                        width="4"
-                        height="1"
-                        height="0.3"
-                ></a-image>
-                <a-image
-                        position="1.7 0.7 0.1"
-                        src="#crossIcon"
-                        width="0.33"
-                        height="0.33"
-                ></a-image>
-            </a-plane>
-        </template>
-
-        <template id="infoPanel2">
-            <a-plane
-                    color="black"
-                    material="shader: flat"
-                    height="2"
-                    width="4"
-                    position="0 0 0"
-                    rounded="2.8"
-            >
-                <a-image
-                        position="0 0 0.1"
-                        src="#text-01"
-                        width="4"
-                        height="1"
-                        height="0.3"
-                ></a-image>
-                <a-image
-                        position="1.7 0.7 0.1"
-                        src="#crossIcon"
-                        width="0.33"
-                        height="0.33"
-                ></a-image>
-            </a-plane>
-        </template>
     </a-assets>
-
     <!-- room teleport hotspots -->
 
     <a-entity id="spots" hotspots="">
@@ -698,7 +613,6 @@
         // myLoading(xhrFile);
     });
 </script>
-<script>
     // setTimeout(() => {
         let currentInfoPanel = null;
 
@@ -767,6 +681,6 @@
                 });
             });
     // }, 1500);
-</script>
+</script> -->
 </body>
 </html>
