--- a/src/pages/kamaz.html
+++ b/src/pages/kamaz.html
@@ -181,7 +181,7 @@
 <!--                    <div class="tech_spec__mission-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__mission hidden">
-                    <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии</p>
+                    <p class="tech_spec__text-descr">Помощь на&nbsp;месте аварий, буксировка неисправной и&nbsp;возвращение на&nbsp;колёса перевернувшейся техники, прикрытие места ДТП на&nbsp;скоростных магистралях, оформление европротоколов и&nbsp;регулировка движения</p>
                 </div>
                 <div class="tech_spec__outfit-panel hidden">
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
@@ -197,31 +197,25 @@
                             <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/amarok/outfit_1.svg" alt="Огнетушитель" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Огнетушитель</span>
+                            <span class="tech_spec__outfit-text">Порошковые огнетушители</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/amarok/outfit_2.svg" alt="Аптечка" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Аптечка</span>
+                            <span class="tech_spec__outfit-text">Расширенная аптечка</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты" fetchpriority="high">
+                                <img src="../img/layout/outfit/kamaz/outfit_1.svg" alt="Бензиновый генератор" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Инструменты</span>
+                            <span class="tech_spec__outfit-text">Бензиновый генератор</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_4.svg" alt="Трос" fetchpriority="high">
+                                <img fetchpriority="high" src="../img/layout/outfit/kamaz/outfit_2.svg" alt="Компрессор воздушный">
                             </div>
-                            <span class="tech_spec__outfit-text">Трос</span>
-                        </li>
-                        <li class="tech_spec__outfit-item">
-                            <div class="tech_spec__outfit-img">
-                                <img fetchpriority="high" src="../img/layout/outfit/ford/outfit_1.svg" alt="Противооткатные упоры">
-                            </div>
-                            <span class="tech_spec__outfit-text">Колодки</span>
+                            <span class="tech_spec__outfit-text">Компрессор воздушный</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
@@ -231,33 +225,45 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола" fetchpriority="high">
+                                <img src="../img/layout/outfit/amarok/outfit_3.svg" alt="Инструменты" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Бланки европротокола</span>
-                        </li>
-                        <li class="tech_spec__outfit-item">
-                            <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_8.svg" alt="Телескопическая лестница" fetchpriority="high">
-                            </div>
-                            <span class="tech_spec__outfit-text">Cкладная лестница</span>
-                        </li>
-                        <li class="tech_spec__outfit-item">
-                            <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_9.svg" alt="Домкрат" fetchpriority="high">
-                            </div>
-                            <span class="tech_spec__outfit-text">Домкрат</span>
-                        </li>
-                        <li class="tech_spec__outfit-item">
-                            <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_10.svg" alt="Дорожные конусы" fetchpriority="high">
-                            </div>
-                            <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                            <span class="tech_spec__outfit-text">Инструменты</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/amarok/outfit_11.svg" alt="Гайковерт" fetchpriority="high">
                             </div>
                             <span class="tech_spec__outfit-text">Гайковерт</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/amarok/outfit_7.svg" alt="Бланки европротокола" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Бланки европротокола</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/kamaz/outfit_3.svg" alt="Гидравлический домкрат" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Гидравлический домкрат</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/kamaz/outfit_4.svg" alt="Домкрат" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Надувной домкрат</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/kamaz/outfit_5.svg" alt="Жесткая сцепка" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Жесткая сцепка</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/kamaz/outfit_6.svg" alt="Временные дорожные знаки" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Временные дорожные знаки</span>
                         </li>
                     </ul>
                 </div>
@@ -273,7 +279,7 @@
 </div>
 
 <div class="tech_spec__interior" id="kamaz">
-    <p class="tech_spec__interior-title">Камаз</p>
+    <p class="tech_spec__interior-title">Kamaz 43502</p>
     <div class="tech_spec__interior-wrapper">
         <div class="tech_spec__interior-btn">
             <span class="tech_spec__interior-text">В салон</span>
@@ -297,7 +303,7 @@
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
                                 <picture>
-                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high">
                                 </picture>
                             </a>
                         </div>
@@ -376,54 +382,104 @@
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe" allow="xr-spatial-tracking"></iframe>
 <div id="overlay"></div>
 
-<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" vr-mode-ui="enabled: false" ar-mode-ui="enabled: false" xr-mode-ui="enabled: false"
-         device-orientation-permission-ui="
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" vr-mode-ui="enabled: false" ar-mode-ui="enabled: false" xr-mode-ui="enabled: false" device-orientation-permission-ui="
  denyButtonText: Отказаться;
  allowButtonText: Разрешить;
  cancelButtonText: Закрыть;
  deviceMotionMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
  mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
  httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
-    <a-assets>
-        <script id="flatShader" type="x-shader/x-fragment">
-          varying vec2 vUv;
-          void main() {
-            gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-          }
-        </script>
-        <img
-                id="room1"
-                src="../img/layout/pages/main/360/amarok/amarok.jpg"
-                crossorigin="anonymous"
-                importance="high"
-        />
-        <a-mixin
-                id="info-sphere"
-                geometry="primitive: sphere; radius: 0.4;"
-                material="color: #ff0000;"
-        ></a-mixin>
-    </a-assets>
-    <a-entity
-            id="cam"
-            camera="fov:80"
-            position="0 1.6 0"
-            look-controls
-            cursor="rayOrigin: mouse"
-            animation__zoomin="property:camera.fov;dur:2000;to:50;startEvents:zoomin;"
-            animation__zoomout="property:camera.fov;dur:1000;to:80;startEvents:zoomout;"
-    >
-        <a-plane
-                id="camfadeplane"
-                rotation="10 0.5 0"
-                position="0 0 -0.5"
-                material="color:#000000;transparent:true;opacity:0"
-                width="0"
-                height="0"
-                animation__fadein="property:material.opacity;to:1;dur:2000;startEvents:camFadeIn"
-                animation__fadeout="property:material.opacity;to:0;dur:1000;startEvents:camFadeOut"
-        ></a-plane>
+ <a-assets>
+    <img
+      id="room1"
+      src="../img/layout/pages/main/360/kamaz/kamaz_1.jpg"
+      crossorigin="anonymous"
+      importance="high"
+    />
+    <img
+      id="room2"
+      src="../img/layout/pages/main/360/kamaz/kamaz_2.jpg"
+      crossorigin="anonymous"
+      importance="low"
+    />
+    <img
+      id="room3"
+      src="../img/layout/pages/main/360/kamaz/kamaz_3.jpg"
+      crossorigin="anonymous"
+      importance="low"
+    />
+    <img
+      id="hotspot"
+      src="../img/layout/pages/main/360/hotspot.svg"
+      crossorigin="anonymous"
+    />
+  </a-assets>
+
+  <!-- room teleport hotspots -->
+
+  <a-entity id="spots" hotspots="">
+    <a-entity id="group-room1">
+      <a-image
+        src="#hotspot"
+        spot="linkto:#room2;spotgroup:group-room2;phiStart:100"
+        position="0 0 10"
+        look-at
+      ></a-image>
     </a-entity>
-    <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="175"></a-sky>
+
+    <a-entity id="group-room2" scale="0 0 0">
+      <!-- переход в третью комнату -->
+      <a-image
+        spot="linkto:#room3;spotgroup:group-room3;phiStart:100"
+        src="#hotspot"
+        position="-1.5 0 10"
+        look-at
+      ></a-image>
+      <!-- возврат в первую комнату -->
+      <a-image
+        spot="linkto:#room1;spotgroup:group-room1;phiStart:240"
+        src="#hotspot"
+        position="1 -1 -10"
+        look-at
+      ></a-image>
+    </a-entity>
+
+    <a-entity id="group-room3" scale="0 0 0">
+      <!-- возврат во вторую комнату -->
+      <a-image
+        spot="linkto:#room2;spotgroup:group-room2;phiStart:100"
+        src="#hotspot"
+        position="1 0 -10"
+        look-at
+      ></a-image>
+    </a-entity>
+  </a-entity>
+
+  <a-entity
+    id="cam"
+    camera="fov:80"
+    position="0 1.6 0"
+    look-controls
+    cursor="rayOrigin: mouse"
+    animation__zoomin="property:camera.fov;dur:2000;to:50;startEvents:zoomin;"
+    animation__zoomout="property:camera.fov;dur:1000;to:80;startEvents:zoomout;"
+  >
+    <a-plane
+      id="camfadeplane"
+      rotation="10 0.5 0"
+      position="0 0 -0.5"
+      material="color:#000000;transparent:true;opacity:0"
+      width="0"
+      height="0"
+      animation__fadein="property:material.opacity;to:1;dur:2000;startEvents:camFadeIn"
+      animation__fadeout="property:material.opacity;to:0;dur:1000;startEvents:camFadeOut"
+    ></a-plane>
+  </a-entity>
+
+  <!-- тут где написано phi-start подбираем точку начала первого кадра
+(куда будет повёрнута камера при загрузке страницы) -->
+
+  <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="240"></a-sky>
 </a-scene>
 
 <script type="module">
@@ -535,13 +591,10 @@
     }
 
     const IframeObject = {
-        AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
+        AR_ON: 'https://app.vectary.com/p/1awk5uLRPcu5rk4z0CzdTJ',
         AR_OFF: 'https://app.vectary.com/p/0Q3y1HJQrvvFuRdiFhsjkk',
-        MOBILE_AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
-        // MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
-        XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389',
+        XHR_AR_ON: 'https://d15a7j1h1vwzab.cloudfront.net/cb/d1/3f/cbd13f3a-4060-49f0-bab7-9d7109fd24df',
         XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/07a50004-10c5-4577-9118-e85c0dcde760/07a50004-10c5-4577-9118-e85c0dcde760',
-        XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389'
     };
     let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
@@ -554,8 +607,8 @@
         xhrFile = IframeObject.XHR_AR_OFF;
         ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
-        readySRC = IframeObject.MOBILE_AR_ON;
-        xhrFile = IframeObject.XHR_MOBILE_AR_ON;
+        readySRC = IframeObject.AR_ON;
+        xhrFile = IframeObject.XHR_AR_ON;
     } else {
         readySRC = IframeObject.AR_ON;
         xhrFile = IframeObject.XHR_AR_ON;
@@ -583,76 +636,6 @@
         initializeModelApi();
         // myLoading(xhrFile);
     });
-</script>
-<script>
-    // setTimeout(() => {
-        let currentInfoPanel = null;
-
-        // Open the panel
-        document
-            .querySelectorAll('[mixin="info-sphere"]')
-            .forEach(function (sphere) {
-                sphere.addEventListener("click", function () {
-                    console.log("Info sphere clicked: " + this.id);
-
-                    const currentSphereIdNumber = this.id.replace("sphere", "");
-
-                    // Get the template for this info sphere
-                    const template = document.querySelector(
-                        "#infoPanel" + currentSphereIdNumber
-                    );
-
-                    // Get the info panel entity
-                    const infoPanel = document.querySelector(
-                        "#infoPanelContainer" + currentSphereIdNumber
-                    );
-
-                    console.log("Current info panel: ", infoPanel);
-
-                    // Instantiate the new info panel from the template
-                    infoPanel.appendChild(document.importNode(template.content, true));
-
-                    const allInfoPanelContainerElements = document.querySelectorAll(
-                        "[id^=infoPanelContainer]"
-                    );
-
-                    document
-                        .querySelectorAll('[src="#crossIcon"]')
-                        .forEach(function (cross) {
-                            cross.addEventListener("click", function () {
-                                allInfoPanelContainerElements.forEach((container) => {
-                                    if (container.id === infoPanel.id) {
-                                        container.innerHTML = "";
-                                        document
-                                            .querySelector("#sphere" + currentInfoPanel)
-                                            .setAttribute("visible", true);
-                                    }
-                                });
-                            });
-                        });
-
-                    allInfoPanelContainerElements.forEach((container) => {
-                        if (container.id !== infoPanel.id) {
-                            container.innerHTML = "";
-                        }
-                        this.setAttribute("visible", true);
-                    });
-
-                    // console.log("Current info panel insides: ", infoPanel.innerHTML);
-
-                    const idNumber = currentSphereIdNumber;
-                    if (currentInfoPanel) {
-                        document
-                            .querySelector("#sphere" + currentInfoPanel)
-                            .setAttribute("visible", true);
-                    }
-                    // document.querySelector("#info" + idNumber).style.display = "block";
-                    this.setAttribute("visible", false);
-                    currentInfoPanel = idNumber;
-                    console.log("Current info panel id: " + currentInfoPanel);
-                });
-            });
-    // }, 1500);
 </script>
 </body>
 </html>
