--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -305,7 +305,7 @@
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kamaz.html">
                                 <picture>
-                                    <!-- <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high"> -->
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high">
                                 </picture>
                             </a>
                         </div>
@@ -393,20 +393,13 @@
  mobileDesktopMessage: Разрешите этому сайту использовать гироскопы вашего устройства для ориентации в&nbsp;пространстве. Так экскурсия станет гораздо интерактивней и&nbsp;увлекательней.;
  httpsMessage: Зайдите на&nbsp;этот сайт по&nbsp;протоколу HTTPS, чтобы войти в&nbsp;режим&nbsp;VR и&nbsp;предоставить доступ к&nbsp;датчикам устройства.;">
     <a-assets>
-        <script id="flatShader" type="x-shader/x-fragment">
-          varying vec2 vUv;
-          void main() {
-            gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
-          }
-        </script>
         <img
-                id="room1"
-                src="../img/layout/pages/main/360/solaris/solaris.jpg"
-                crossorigin="anonymous"
-                importance="high"
+            id="room1"
+            src="../img/layout/pages/main/360/solaris/solaris.jpg"
+            crossorigin="anonymous"
+            importance="high"
         />
     </a-assets>
-    <!-- room teleport hotspots -->
     <a-entity
             id="cam"
             camera="fov:80"
@@ -597,76 +590,6 @@
         initializeModelApi();
         // myLoading(xhrFile);
     });
-</script>
-<script>
-    // setTimeout(() => {
-        let currentInfoPanel = null;
-
-        // Open the panel
-        document
-            .querySelectorAll('[mixin="info-sphere"]')
-            .forEach(function (sphere) {
-                sphere.addEventListener("click", function () {
-                    console.log("Info sphere clicked: " + this.id);
-
-                    const currentSphereIdNumber = this.id.replace("sphere", "");
-
-                    // Get the template for this info sphere
-                    const template = document.querySelector(
-                        "#infoPanel" + currentSphereIdNumber
-                    );
-
-                    // Get the info panel entity
-                    const infoPanel = document.querySelector(
-                        "#infoPanelContainer" + currentSphereIdNumber
-                    );
-
-                    console.log("Current info panel: ", infoPanel);
-
-                    // Instantiate the new info panel from the template
-                    infoPanel.appendChild(document.importNode(template.content, true));
-
-                    const allInfoPanelContainerElements = document.querySelectorAll(
-                        "[id^=infoPanelContainer]"
-                    );
-
-                    document
-                        .querySelectorAll('[src="#crossIcon"]')
-                        .forEach(function (cross) {
-                            cross.addEventListener("click", function () {
-                                allInfoPanelContainerElements.forEach((container) => {
-                                    if (container.id === infoPanel.id) {
-                                        container.innerHTML = "";
-                                        document
-                                            .querySelector("#sphere" + currentInfoPanel)
-                                            .setAttribute("visible", true);
-                                    }
-                                });
-                            });
-                        });
-
-                    allInfoPanelContainerElements.forEach((container) => {
-                        if (container.id !== infoPanel.id) {
-                            container.innerHTML = "";
-                        }
-                        this.setAttribute("visible", true);
-                    });
-
-                    // console.log("Current info panel insides: ", infoPanel.innerHTML);
-
-                    const idNumber = currentSphereIdNumber;
-                    if (currentInfoPanel) {
-                        document
-                            .querySelector("#sphere" + currentInfoPanel)
-                            .setAttribute("visible", true);
-                    }
-                    // document.querySelector("#info" + idNumber).style.display = "block";
-                    this.setAttribute("visible", false);
-                    currentInfoPanel = idNumber;
-                    console.log("Current info panel id: " + currentInfoPanel);
-                });
-            });
-    // }, 1500);
 </script>
 </body>
 </html>
