мкдиа контент Грузовика

--- a/src/pages/kamaz.html
+++ b/src/pages/kamaz.html
@@ -276,7 +276,7 @@
 </div>
 
 <div class="tech_spec__interior" id="kamaz">
-    <p class="tech_spec__interior-title">Kamaz 43502</p>
+    <p class="tech_spec__interior-title">Камаз 43502</p>
     <div class="tech_spec__interior-wrapper">
         <div class="tech_spec__interior-btn">
             <span class="tech_spec__interior-text">В салон</span>
