--- a/src/index.html
+++ b/src/index.html
@@ -323,7 +323,7 @@
                     </div>
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, фургон, грузовик, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД
                         </p>
                     </div>
                     <div class="traffic_patrol-text-5">
@@ -607,7 +607,7 @@
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
                         </p>
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, фургон, грузовик, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
                         </p>
                     </div>
                 </div>
